# KeyRecovery

./: CMakeLists.txt  README.md  cmd.md  setting.md  wsl2.ps1
MPC_v0.1/: README.md
MPC_v0.1/data/: p1.out  p2.out  p3.out  polynomial1  polynomial2  polynomial3
MPC_v0.1/include/: parties.h  recovery.h
MPC_v0.1/src/: aestest.cpp  parties.cpp  polynomial_generator  polynomial_generator.cpp  recovery  recovery.cpp  test  test.cpp
MPC_v0.2/include/: parties.h
MPC_v0.2/src/: aestest  measure_algorithm  measure_algorithm.cpp  parties.cpp  polynomial_generator  polynomial_generator.cpp  recovery  recovery.cpp
MPC_v0.3/data/: HJKY-10-11-160-100.txt  HJKY-11-12-160-100.txt  HJKY-2-3-160-100.txt  (+58 more)
data/: HJKY-10-11-192-100.txt  HJKY-10-11-224-100.txt  HJKY-10-11-256-100.txt  HJKY-11-12-256-100.txt  HJKY-12-13-224-100.txt  HJKY-12-13-256-100.txt  HJKY-13-14-192-100.txt  HJKY-13-14-224-100.txt  HJKY-15-16-224-100.txt  HJKY-15-16-256-100.txt  HJKY-2-3-224-100.txt  HJKY-2-3-256-100.txt  HJKY-3-4-160-100.txt  HJKY-3-4-192-100.txt  HJKY-3-4-224-100.txt  HJKY-4-5-192-100.txt  HJKY-4-5-224-100.txt  HJKY-5-6-160-100.txt  HJKY-6-7-192-100.txt  HJKY-6-7-224-100.txt  HJKY-7-8-160-100.txt  HJKY-7-8-192-100.txt  HJKY-7-8-256-100.txt  HJKY-8-9-160-100.txt  HJKY-8-9-256-100.txt  HJKY-9-10-160-100.txt  HJKY-9-10-224-100.txt  our-10-11-160-100.txt  our-10-11-256-100.txt  our-11-12-160-100.txt  our-11-12-192-100.txt  our-11-12-224-100.txt  our-12-13-256-100.txt  our-13-14-224-100.txt  our-14-15-192-100.txt  our-14-15-224-100.txt  our-15-16-160-100.txt  our-15-16-224-100.txt  our-15-16-256-100.txt  our-2-3-160-100.txt  (+11 more)
include/: parties.h  parties.hpp  utils.hpp
src/: HJKY_recovery  HJKY_recovery.cpp  our_recovery  our_recovery.cpp  parties.cpp
(+2 files in other folders)
